refactor(websocket): 优化 WebSocket 配置和消息处理逻辑
- 在 RedisConfiguration 中移除 CachingConfigurerSupport 继承并调整方法重写
- 为 KitWsServer 添加空消息处理逻辑，当收到 "[{}]" 消息时清理客户端连接
- 在 KitSpringBeanHolder 中将线程ID获取方式从 getId() 改为 threadId()
- 为 Redis 扫描相关方法添加 SuppressWarnings 注解以处理泛型警告