@@ -162,7 +162,7 @@ public class KitSpringBeanHolder implements ApplicationContextAware, DisposableB
      * @return /
      */
     default String getCallBackName() {
-      return Thread.currentThread().getId() + ":" + this.getClass().getName();
+      return Thread.currentThread().threadId() + ":" + this.getClass().getName();
     }
   }
 }
